src/Containers/Newform/Newform.css
.NewForm {
	display: flex;
	align-items: center;
	justify-content: flex-start;
	flex-direction: column;
	height: 100%;
}

.newForm-title {
	width: 100%;
	display: flex;
}

.newForm-title > button {
	background: #ff432a;
	border-radius: 25px;
	color: white;
	padding: 0.5rem 0.75rem;
	font-size: 0.9rem;
	font-weight: 300;
	outline: none;
	border: none;
}

.newForm-title > input {
	border: none;
	outline: none;
	font-size: 1.5rem;
	font-weight: 500;
	width: 95%;
	overflow-y: visible;
	text-decoration: underline;
	background: none;
}

.newForm-title > input::placeholder {
	font-size: 1.5rem;
	font-weight: 500;
}

.newFormQuestions {
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	gap: 1rem;
	width: 100%;
	margin-top: 0.75rem;
	max-height: 100%;
	overflow-y: scroll;
	padding: 0 0.25rem 1rem 0.25rem;
}

.newFormQuestion {
	flex-shrink: 0;
	background: white;
	width: 100%;
	min-height: 1rem;
	box-shadow: 0px 4px 4px 0px #00000040;
	border-radius: 20px;
	padding: 1rem;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	padding-right: 1.5rem;
}

.newFormQuestionUpper {
	width: 100%;
	display: flex;
	justify-content: space-between;
	align-items: center;
}

.newFormQuestionUpper > .left {
	display: flex;
	gap: 0.75rem;
	width: 100%;
}

.newFormQuestionTitle {
	width: 90%;
}

.newFormQuestionTitle > input {
	border: none;
	outline: none;
	background: none;
	font-size: 1rem;
	width: 100%;
}

.newFormQuestionTitle > input::placeholder {
	font-size: 1rem;
}

.newFormQuestionMiddle {
	width: 100%;
	display: flex;
	justify-content: flex-start;
	align-items: flex-end;
	padding-left: 1.35rem;
	margin-top: 0.5rem;
}

.newFormAddQuestionButton {
	background: #ff432a;
	border-radius: 25px;
	color: white;
	padding: 0.5rem 0.75rem;
	font-size: 0.8rem;
	font-weight: 300;
	margin-left: 0.5rem;
	margin-top: 1rem;
	align-self: flex-start;
	cursor: pointer;
}

.newFormQuestionAnswerArea {
	width: 100%;
}

.newFormQuestionLower {
	display: flex;
	justify-content: flex-end;
	align-items: center;
	width: 100%;
	margin-top: 1rem;
}

.newFormAddOption {
	margin-right: auto;
	margin-left: 1.35rem;
}

.newFormAddOption > p {
	font-size: 0.85rem;
	color: #f86552;
}

.newFormAddOption > p:hover {
	color: #ff432a;
}

.newFormQuestionDelete {
	font-size: 0.9rem;
	font-weight: 500;
	color: #ff432a;
	display: flex;
	justify-content: center;
	align-items: center;
	gap: 0.2rem;
	border: 1px solid #ff432a;
	border-radius: 10px;
	padding: 0.25rem 0.5rem;
	cursor: pointer;
}

.newFormQuestionDelete-icon {
	font-size: 1.2rem;
}

/* drop down */
.Dropdown-root {
	position: relative;
	width: max-content;
	min-width: 146px;
}

.Dropdown-control {
	position: relative;
	overflow: hidden;
	background-color: white;
	border: 1px solid rgb(0, 0, 0);
	border-radius: 15px;
	box-sizing: border-box;
	color: rgb(0, 0, 0);
	cursor: default;
	outline: none;
	padding: 5px 31px 5px 10px;
	transition: all 200ms ease;
}

.is-open .Dropdown-control {
	border-bottom-right-radius: 0;
	border-bottom-left-radius: 0;
}

.is-open .Dropdown-arrow {
	border-color: transparent transparent rgb(0, 0, 0);
	border-width: 0 5px 5px;
}

.Dropdown-arrow {
	border-color: rgb(0, 0, 0) transparent transparent;
	border-style: solid;
	border-width: 5px 5px 0;
	content: " ";
	display: block;
	height: 0;
	margin-top: -ceil(2.5);
	position: absolute;
	right: 10px;
	top: 14px;
	width: 0;
}

.Dropdown-menu {
	background-color: white;
	border: 1px solid rgb(0, 0, 0);
	box-shadow: 0 1px 0 rgb(0 0 0 / 6%);
	border-bottom-right-radius: 15px;
	border-bottom-left-radius: 15px;
	box-sizing: border-box;
	margin-top: -1px;
	max-height: 200px;
	position: absolute;
	top: 100%;
	width: 100%;
	z-index: 1000;
	-webkit-overflow-scrolling: touch;
	max-height: 6rem;
	overflow-y: scroll;
}

.Dropdown-option {
	box-sizing: border-box;
	color: rgba(0, 0, 0, 0.8);
	border-bottom: 1px solid black;
	cursor: pointer;
	display: block;
	padding: 5px 0px 5px 10px;
}

.Dropdown-option.is-selected {
	background-color: #f2f9fc;
	color: #000000;
	font-weight: 500;
}

.Dropdown-option:last-child {
	border-bottom-right-radius: 2px;
	border-bottom-left-radius: 2px;
	border: none;
}

.requiredSwitch {
	display: flex;
	gap: 0.25rem;
	align-items: center;
}

.requiredSwitch > p {
	font-size: 0.8rem;
}

@media only screen and (max-width: 430px) {
	.newFormQuestionUpper {
		flex-direction: column;
		align-items: flex-start;
	}
	.newFormQuestionMiddle {
		padding-left: 0;
	}
}
.newFormQuestions > textarea {
	outline: none;
	border: none;
	border-bottom: 2px solid #000000;
	width: 100%;
	padding: 0.5rem 0;
	background: none;
	height: 3.5rem;
	min-height: 3.5rem;
	resize: vertical;
}
.newFormQuestions > textarea:focus-within {
	border-color: #ff432a;
}

